photoviewer.html bug fixed, still not working well on Safari & Chrome !!

--- a/public/stylesheets/photostyle.css
+++ b/public/stylesheets/photostyle.css
@@ -9792,24 +9792,6 @@ S .smallBrick .brickActionCommentText{
 	z-index:902
 }
 
-.shadowHover{
-}
-
-.blackOverlay{
-	cursor:pointer;
-	position:fixed;
-	bottom:0;
-	right:0;
-	top:0;
-	left:0;
-	overflow:hidden;
-	display:none;
-	z-index:7000;
-	opacity:.5;
-	filter:alpha(opacity=50);
-	background:#000
-}
-
 .mediaDetailContainer{
 	-webkit-box-sizing:border-box;
 	-moz-box-sizing:border-box;
@@ -9818,55 +9800,35 @@ S .smallBrick .brickActionCommentText{
 
 .mediaDetail{
 	max-width:960px;
-	height:640px;
+	height: auto;
+	padding: 14px;
 	position:relative;
-	z-index:1020
 }
 
 .modal-header .close{
 	margin-top:0!important
 }
 
-.close{
-	color:#000;
-	position:absolute;
-	top:0;
-	right:0;
-	font-family:Tahoma,Helvetica,Arial,sans-serif;
-	font-size:24px;
-	opacity:.4;
-	filter:alpha(opacity=40);
-	outline-style:none;
-	text-shadow:white 0 1px 0;
-	text-decoration:none;
-	z-index:8010;
-	padding:15px!important
-}
+html {overflow-y: scroll;}
 
-.close:hover{
-	color:#000;
-	text-decoration:none;
-	opacity:.6;
-	filter:alpha(opacity=40);
-	cursor:pointer
+body {
+	width:auto;
+	max-width: 960x;
+	height:auto;
 }
 
 .bigPhoto{
 	position:relative;
-	top:14px;
-	left:14px;
 	width:612px;
-	height:612px;
-	padding:0;
+	height:auto;
+	padding:0px;
 	cursor:pointer;
-	overflow:hidden
+	overflow:hidden;
 }
 
 .bigPhoto img{	
 	width:612px;
-	height:612px;
-	display:block;
-	cursor:pointer
+	height:100%;
 }
 
 .fp-embed{
@@ -9899,78 +9861,6 @@ S .smallBrick .brickActionCommentText{
 
 .photoExtraInfo span{
 	font-weight:normal
-}
-
-.prevNextWrapper{
-	width:100%;
-	height:100%;
-	position:absolute;
-	left:0;
-	top:0;
-	display:none;
-	pointer-events:none
-}
-
-.prevNext{
-	position:absolute;
-	width:150px;
-	height:150px;
-	top:220px;
-	z-index:8009;
-	-webkit-border-radius:8px;
-	-moz-border-radius:8px;
-	border-radius:8px;
-	overflow:hidden;
-	pointer-events:auto;
-	pointer-events:all
-}
-
-.prevNext a{
-	opacity:.7;
-	filter:alpha(opacity=70)
-}
-
-.prevNext a:hover{
-	opacity:1;
-	filter:alpha(opacity=100)
-}
-
-.prevNextLite{
-	-moz-box-shadow:none!important;
-	-webkit-box-shadow:none!important;
-	box-shadow:none!important;
-	border:none!important;
-	background:none!important
-}
-
-.prevNextLite .thumb{
-	display:none!important
-}
-
-.prevNext .thumb,.prevNext .big{
-	opacity:.001;
-	filter:alpha(opacity=.1)
-}
-
-.prevNext img{
-	display:block;
-	position:absolute;
-	left:0;
-	top:0;
-	width:100%!important;
-	height:100%!important;
-	-webkit-border-radius:8px;
-	-moz-border-radius:8px;
-	border-radius:8px;
-	overflow:hidden
-}
-
-.prevButton{
-	left:0
-}
-
-.nextButton{
-	right:0
 }
 
 .pic-load{
@@ -10244,7 +10134,7 @@ S .smallBrick .brickActionCommentText{
 }
 
 .detailComments{
-	height:305px;
+	height:auto;
 	overflow:hidden
 }
 
